--- a/testutil/templates/nginx_reverse.conf.tmpl
+++ b/testutil/templates/nginx_reverse.conf.tmpl
@@ -28,6 +28,17 @@ http {
             add_header X-Nginx-Cache $upstream_cache_status;
         }
 
+        location /cache {
+            proxy_pass {{ $pass }};
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache zone1;
+            proxy_cache_valid 200 10m;
+            add_header X-Nginx-Cache $upstream_cache_status;
+        }
+
         location / {
             proxy_pass {{ $pass }};
             proxy_set_header Host $host;
