--- a/testutil/templates/nginx_echo.conf.tmpl
+++ b/testutil/templates/nginx_echo.conf.tmpl
@@ -22,6 +22,7 @@ http {
         }
 
         location / {
+            add_header Cache-Control public,max-age=3600;
             return 200 "OK from {{ .Hostname }}!!";
         }
     }
